--- a/index.html
+++ b/index.html
@@ -7,9 +7,63 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+		<div class="wrapper">
+			<header class="header">
+				<div class="header__logo">
+					<h1 class="logo">
+						<span class="logo__image"><img src="img/svg/logo.svg"></span>
+						<span class="logo__label">Music Festival 2016</span>
+					</h1>
+				</div>
+				<nav class="header__navigation">
+					<ul class="menu menu--main">
+						<li class="menu__item"><a href="#">Acts</a></li>
+						<li class="menu__item"><a href="#">FAQ</a></li>
+						<li class="menu__item"><a href="#">Tickets</a></li>
+					</ul>
+				</nav>
+			</header>
+			<main class="content">
+				<div class="content__teaser">
+					<div class="teaser__text">
+						<h2>Sa | 10.09.16 - Arena Wiesen</h2>
+						<ul class="teaser__acts-list">
+							<li>Camo&Crooked</li>
+							<li>Feed Me</li>
+							<li>Nero</li>
+							<li>Parov Stellar</li>
+							<li>Format:B</li>
+							<li>Pleasurekraft</li>
+							<li>And many more to come</li>
+						</ul>
+					</div>
+				</div>
+				<div class="content__acts-list">
+					<div class="acts-list__intro">
+						<h2>The Acts</h2>
+						<p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <span>(more)</span></p>
+					</div>
+					<ul class="acts-list__list">
+					</ul>
+				</div>
+			</main>
+			<footer class="footer">
+				<div class="footer__minipressum">
+					<p>Copyright Sonic Music Festival 2016<br>
+						All Rights Reserved - <a href="impressum.html">Impressum</a></p>
+				</div>
+				<div class="footer__social-media">
+					<ul class="list--social-media">
+						<li class="list__item"><a href="#">f</a></li>
+						<li class="list__item"><a href="#">i</a></li>
+						<li class="list__item"><a href="#">y</a></li>
+					</ul>
+				</div>
+			</footer>
+		</div>
     </body>
 </html>
