--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<main class="content">
 				<div class="content__teaser">
 					<div class="teaser__text">
-						<h2>Sa | 10.09.16 - Arena Wiesen</h2>
+						<h2 class="teaser__headline">Sa | 10.09.16 - Arena Wiesen</h2>
 						<ul class="teaser__acts-list">
 							<li>Camo&Crooked</li>
 							<li>Feed Me</li>
@@ -45,9 +45,53 @@
 				<div class="content__acts-list">
 					<div class="acts-list__intro">
 						<h2>The Acts</h2>
-						<p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <span>(more)</span></p>
+						<p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <span class="txtcolor--primary">(more)</span></p>
 					</div>
 					<ul class="acts-list__list">
+						<li class="acts-list__list__item">
+							<figure class="act">
+								<div class="act__image">
+									<img src="https://unsplash.it/300/300?random">
+								</div>
+								<figcaption class="act__caption">
+									<h3 class="act__name">Camo&Krooked</h3>
+									<p class="act__genre">drumm and base</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="acts-list__list__item">
+							<figure class="act">
+								<div class="act__image">
+									<img src="https://unsplash.it/300/300?random">
+								</div>
+								<figcaption class="act__caption">
+									<h3 class="act__name">Camo&Krooked</h3>
+									<p class="act__genre">drumm and base</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="acts-list__list__item">
+							<figure class="act">
+								<div class="act__image">
+									<img src="https://unsplash.it/300/300?random">
+								</div>
+								<figcaption class="act__caption">
+									<h3 class="act__name">Camo&Krooked</h3>
+									<p class="act__genre">drumm and base</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="acts-list__list__item">
+							<figure class="act">
+								<div class="act__image">
+									<img src="https://unsplash.it/300/300?random">
+								</div>
+								<figcaption class="act__caption">
+									<h3 class="act__name">Camo&Krooked</h3>
+									<p class="act__genre">drumm and base</p>
+								</figcaption>
+							</figure>
+						</li>
 					</ul>
 				</div>
 			</main>
@@ -63,6 +107,7 @@
 						<li class="list__item"><a href="#">y</a></li>
 					</ul>
 				</div>
+				<div class="clear"></div>
 			</footer>
 		</div>
     </body>
